--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <span class="icon-menu"></span>
               <span class="icon-menu"></span>
             </button>
-            <!-- <a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt="YMMOR 2025"></a> -->
+            <a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt="YMMOR 2025"></a>
           </div>
           <div class="collapse navbar-collapse" id="main-navbar">
             <ul class="navbar-nav mr-auto w-100 justify-content-end">
@@ -103,11 +103,13 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img class="d-block w-100" src="assets/img/slider/slide1.png" alt="SISSA">
-            <div class="carousel-caption d-md-block">  <!-- Added d-md-block to ensure visibility -->
+            <div class="carousel-caption d-md-block">
               <p class="fadeInUp wow" data-wow-delay=".6s">May 4-9, 2025 in Trieste, Italy</p>
               <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Young Mathematicians in Model Order Reduction Conference</h1>
-              <a href="#registration" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Register Now</a>
-              <a href="#about" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Learn More</a>
+              <div class="buttons-group">
+                <a href="#registration" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Register Now</a>
+                <a href="#about" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Learn More</a>
+              </div>
             </div>
           </div>
         </div>
@@ -421,45 +423,6 @@
     </section>
     <!-- Ask Question Section End -->
 
-    <!-- Sponsors Section Start -->
-    <section id="sponsors" class="section-padding">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div class="section-title-header text-center">
-              <h1 class="section-title wow fadeInUp" data-wow-delay="0.2s">Sponsores</h1>
-              <p class="wow fadeInDown" data-wow-delay="0.2s">Global Grand Event on Digital Design</p>
-            </div>
-          </div>
-        </div>
-        <div class="row mb-30 text-center wow fadeInDown" data-wow-delay="0.3s">
-          <div class="col-md-3 col-sm-3 col-xs-12">
-            <div class="spnsors-logo">
-              <a href="#"><img class="img-fluid" src="assets/img/sponsors/logo-01.png" alt=""></a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-12">
-            <div class="spnsors-logo">
-              <a href="#"><img class="img-fluid" src="assets/img/sponsors/logo-02.png" alt=""></a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-12">
-            <div class="spnsors-logo">
-              <a href="#"><img class="img-fluid" src="assets/img/sponsors/logo-03.png" alt=""></a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-12">
-            <div class="spnsors-logo">
-              <a href="#"><img class="img-fluid" src="assets/img/sponsors/logo-04.png" alt=""></a>
-            </div>
-          </div>
-          <div class="col-12 text-center">
-            <a href="#" class="btn btn-common">become a sponsor</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Sponsors Section End -->
 
 
 <!-- Registration Section Start -->
@@ -589,6 +552,46 @@ document.addEventListener('DOMContentLoaded', function() {
     `).openPopup();
 });
 </script>
+
+    <!-- Sponsors Section Start -->
+    <section id="sponsors" class="section-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="section-title-header text-center">
+              <h1 class="section-title wow fadeInUp" data-wow-delay="0.2s">Sponsores</h1>
+              <p class="wow fadeInDown" data-wow-delay="0.2s">Global Grand Event on Digital Design</p>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-30 text-center wow fadeInDown" data-wow-delay="0.3s">
+          <div class="col-md-3 col-sm-3 col-xs-12">
+            <div class="spnsors-logo">
+              <a href="#"><img class="img-fluid" src="assets/img/sponsors/logo-01.png" alt=""></a>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-3 col-xs-12">
+            <div class="spnsors-logo">
+              <a href="#"><img class="img-fluid" src="assets/img/sponsors/logo-02.png" alt=""></a>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-3 col-xs-12">
+            <div class="spnsors-logo">
+              <a href="#"><img class="img-fluid" src="assets/img/sponsors/logo-03.png" alt=""></a>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-3 col-xs-12">
+            <div class="spnsors-logo">
+              <a href="#"><img class="img-fluid" src="assets/img/sponsors/logo-04.png" alt=""></a>
+            </div>
+          </div>
+          <div class="col-12 text-center">
+            <a href="#" class="btn btn-common">become a sponsor</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Sponsors Section End -->
 
     <!-- Footer Section Start -->
     <footer class="footer-area section-padding">
