--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
           <div class="registration-card">
             <!-- Download Template Button - Prominent placement -->
             <div class="text-center mb-4">
-              <a href="assets/templates/abstract_template.tex" class="btn btn-primary btn-lg" download>
+              <a href="assets/templates/ymmor2025_abstract.zip" class="btn btn-primary btn-lg" download>
                 <i class="lni-download"></i> Download Abstract Template
               </a>
               <p class="mt-3">Please download the template, prepare your abstract, and include it in your registration email.</p>
@@ -899,6 +899,121 @@ document.addEventListener('DOMContentLoaded', function() {
     `).openPopup();
 });
 </script>
+
+    <!-- Team Section Start -->
+    <section id="team" class="section-padding text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="section-title-header text-center">
+              <h1 class="section-title wow fadeInUp" data-wow-delay="0.2s">Organizers</h1>
+              <p class="wow fadeInDown" data-wow-delay="0.2s">YMMOR 2025 Organizing Committee</p>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <!-- First Row -->
+          <div class="row mb-4 justify-content-center" style="max-width: 800px; margin: auto;">
+            <!-- Anna Ivagnes -->
+            <div class="col-sm-12 col-md-6 mb-4">
+              <div class="team-item wow fadeInUp" data-wow-delay="0.2s">
+                <div class="team-img-wrapper">
+                  <div class="team-img">
+                    <img class="img-fluid rounded" src="assets/img/team/anna.jpg" alt="Anna Ivagnes">
+                    <div class="team-overlay">
+                      <div class="overlay-social-icon text-center">
+                        <ul class="social-icons">
+                          <li><a href="mailto:aivagnes@sissa.it" class="social-icon"><i class="lni-envelope" aria-hidden="true"></i></a></li>
+                          <li><a href="https://www.linkedin.com/in/anna-ivagnes-2904521b6/" class="social-icon"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="info-text mt-3">
+                  <h3>Anna Ivagnes</h3>
+                  <p>PhD Student, SISSA</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Moaad Khamlich -->
+            <div class="col-sm-12 col-md-6 mb-4">
+              <div class="team-item wow fadeInUp" data-wow-delay="0.4s">
+                <div class="team-img-wrapper">
+                  <div class="team-img">
+                    <img class="img-fluid rounded" src="assets/img/team/moaad.jpg" alt="Moaad Khamlich">
+                    <div class="team-overlay">
+                      <div class="overlay-social-icon text-center">
+                        <ul class="social-icons">
+                          <li><a href="mailto:mkhamlic@sissa.it" class="social-icon"><i class="lni-envelope" aria-hidden="true"></i></a></li>
+                          <li><a href="https://www.linkedin.com/in/moaad-khamlich-236a672a2/" class="social-icon"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="info-text mt-3">
+                  <h3>Moaad Khamlich</h3>
+                  <p>PhD Student, SISSA</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Second Row -->
+          <div class="row justify-content-center" style="max-width: 800px; margin: auto;">
+            <!-- Ivan Prusak -->
+            <div class="col-sm-12 col-md-6 mb-4">
+              <div class="team-item wow fadeInUp" data-wow-delay="0.6s">
+                <div class="team-img-wrapper">
+                  <div class="team-img">
+                    <img class="img-fluid rounded" src="assets/img/team/ivan.jpg" alt="Ivan Prusak">
+                    <div class="team-overlay">
+                      <div class="overlay-social-icon text-center">
+                        <ul class="social-icons">
+                          <li><a href="mailto:iprusak@sissa.it" class="social-icon"><i class="lni-envelope" aria-hidden="true"></i></a></li>
+                          <li><a href="https://www.linkedin.com/in/ivan-prusak/" class="social-icon"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="info-text mt-3">
+                  <h3>Ivan Prusak</h3>
+                  <p>PostDoc, SISSA</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Pierfrancesco Siena -->
+            <div class="col-sm-12 col-md-6 mb-4">
+              <div class="team-item wow fadeInUp" data-wow-delay="0.8s">
+                <div class="team-img-wrapper">
+                  <div class="team-img">
+                    <img class="img-fluid rounded" src="assets/img/team/pierfrancesco.jpg" alt="Pierfrancesco Siena">
+                    <div class="team-overlay">
+                      <div class="overlay-social-icon text-center">
+                        <ul class="social-icons">
+                          <li><a href="mailto:psiena@sissa.it" class="social-icon"><i class="lni-envelope" aria-hidden="true"></i></a></li>
+                          <li><a href="https://www.linkedin.com/in/pierfrancescosiena/" class="social-icon"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="info-text mt-3">
+                  <h3>Pierfrancesco Siena</h3>
+                  <p>PhD Student, SISSA</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Team Section End -->
+
 
     <!-- Sponsors Section Start -->
     <section id="sponsors" class="section-padding">
