--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 <i class="lni-envelope"></i> Send Registration Email
               </a>
               <p class="mt-3">Click the button above to open your email client with a pre-filled registration template.<br>
-              Don't forget to attach your abstract (PDF format) before sending!</p>
+                <strong>Don't forget to attach your abstract (PDF format and latex source tex file) before sending!</strong></p>
             </div>
           </div>
         </div>
@@ -808,14 +808,10 @@
           <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay="0.4s">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="#header-wrap">Home</a></li>
-              <li><a href="#about">About</a></li>
+              <li><a href="#about">About Conference</a></li>
+              <li><a href="#program">Program</a></li>
               <li><a href="#registration">Registration</a></li>
-              <li><a href="#schedules">Program</a></li>
-              <li><a href="#venue">Venue & Accommodation</a></li>
-              <li><a href="#gallery">Gallery</a></li>
-              <li><a href="#team">Organizers</a></li>
-              <li><a href="#sponsors">Sponsors</a></li>
+              <li><a href="#venue">Venue</a></li>
             </ul>
           </div>
           <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay="0.6s">
