local update by MK

--- a/index.html
+++ b/index.html
@@ -703,12 +703,12 @@
               <div class="team-item wow fadeInUp" data-wow-delay="0.8s">
                 <div class="team-img-wrapper">
                   <div class="team-img">
-                    <img class="img-fluid rounded" src="assets/img/team/pierfrancesco.jpg" alt="Pierfrancesco Siena">
+                    <img class="img-fluid rounded" src="assets/img/team/pier.jpg" alt="Pierfrancesco Siena">
                     <div class="team-overlay">
                       <div class="overlay-social-icon text-center">
                         <ul class="social-icons">
                           <li><a href="mailto:psiena@sissa.it" class="social-icon"><i class="lni-envelope" aria-hidden="true"></i></a></li>
-                          <li><a href="https://www.linkedin.com/in/pierfrancescosiena/" class="social-icon"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
+                          <li><a href="https://www.linkedin.com/in/pierfrancesco-siena-80420b203/" class="social-icon"><i class="lni-linkedin-filled" aria-hidden="true"></i></a></li>
                         </ul>
                       </div>
                     </div>
