local update by MK

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 
           <div class="collapse navbar-collapse" id="main-navbar">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item"><a class="nav-link active" href="#header-wrap">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-              <li class="nav-item"><a class="nav-link" href="#registration">Registration</a></li>
-              <li class="nav-item"><a class="nav-link" href="#schedules">Program</a></li>
-              <li class="nav-item"><a class="nav-link" href="#venue">Venue & Accommodation</a></li>
-              <li class="nav-item"><a class="nav-link" href="#gallery">Gallery</a></li>
-              <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+              <li class="nav-item" style="--item-number: 1"><a class="nav-link active" href="#header-wrap">Home</a></li>
+              <li class="nav-item" style="--item-number: 2"><a class="nav-link" href="#about">About</a></li>
+              <li class="nav-item" style="--item-number: 3"><a class="nav-link" href="#registration">Registration</a></li>
+              <li class="nav-item" style="--item-number: 4"><a class="nav-link" href="#schedules">Program</a></li>
+              <li class="nav-item" style="--item-number: 5"><a class="nav-link" href="#venue">Venue & Accommodation</a></li>
+              <li class="nav-item" style="--item-number: 6"><a class="nav-link" href="#gallery">Gallery</a></li>
+              <li class="nav-item" style="--item-number: 7"><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
           </div>
         </div>
