adding previous editions

--- a/index.html
+++ b/index.html
@@ -142,6 +142,71 @@
     </section>
     <!-- About Section End -->
 
+    <!-- Previous Editions Section Start -->
+    <section id="previous-editions" class="section-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="section-title-header text-center">
+              <h1 class="section-title wow fadeInUp" data-wow-delay="0.2s">Previous Editions</h1>
+              <p class="wow fadeInDown" data-wow-delay="0.2s">History of YMMOR Conferences</p>
+              <!-- Add link to general YMMOR site -->
+              <p class="mt-3">
+                <a href="https://ymmor-conferences.github.io" target="_blank" class="btn btn-common">
+                  <i class="lni-world"></i> YMMOR Conferences Homepage
+                </a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <!-- Stuttgart 2024 -->
+          <div class="col-lg-6 col-md-12 mb-4">
+            <div class="card h-100 wow fadeInLeft" data-wow-delay="0.3s">
+              <div class="card-body">
+                <h3 class="card-title">YMMOR 2024 - Stuttgart</h3>
+                <h6 class="card-subtitle mb-2 text-muted">March 4-8, 2024</h6>
+                <p class="card-text">The third edition of YMMOR was held at the University of Stuttgart, Germany, funded by Simtech.</p>
+                <a href="https://opencms.uni-stuttgart.de/konferenz/ymmor2024/" class="btn btn-common btn-sm" target="_blank">
+                  <i class="lni-world"></i> View Conference Website
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Ulm 2023 -->
+          <div class="col-lg-6 col-md-12 mb-4">
+            <div class="card h-100 wow fadeInRight" data-wow-delay="0.3s">
+              <div class="card-body">
+                <h3 class="card-title">YMMOR 2023 - Ulm</h3>
+                <h6 class="card-subtitle mb-2 text-muted">March 20-24, 2023</h6>
+                <p class="card-text">The second edition took place at the University of Ulm, Germany, continuing the success of the inaugural event.</p>
+                <a href="https://www.uni-ulm.de/mawi/institut-fuer-numerische-mathematik/forschung/ymmor-workshop-2023/" class="btn btn-common btn-sm" target="_blank">
+                  <i class="lni-world"></i> View Conference Website
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Münster 2022 -->
+          <div class="col-lg-6 col-md-12 mb-4 mx-auto">
+            <div class="card h-100 wow fadeInUp" data-wow-delay="0.3s">
+              <div class="card-body">
+                <h3 class="card-title">YMMOR 2022 - Münster</h3>
+                <h6 class="card-subtitle mb-2 text-muted">July 18-22, 2022</h6>
+                <p class="card-text">The inaugural YMMOR conference was held in Münster, Germany, funded by Mathematics Münster, Cluster of Excellence. The event featured interesting talks, discussions, and social activities.</p>
+                <a href="https://www.uni-muenster.de/MathematicsMuenster/events/2022/YMCN-model-order-reduction.shtml" class="btn btn-common btn-sm" target="_blank">
+                  <i class="lni-world"></i> View Conference Website
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Previous Editions Section End -->
+
     <!-- Counter Area Start-->
     <section class="counter-section section-padding">
       <div class="container">
