--- a/index.html
+++ b/index.html
@@ -803,24 +803,31 @@
           </div>
         </div>
         <div class="row mb-30 text-center wow fadeInDown align-items-center" data-wow-delay="0.3s">
-          <div class="col-md-4 col-sm-4 col-xs-12">
+          <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="spnsors-logo">
               <a href="https://www.sissa.it">
                 <img class="img-fluid" src="assets/img/sponsors/sissa.png" alt="SISSA" style="height: 300px; width: auto; object-fit: contain;">
               </a>
             </div>
           </div>
-          <div class="col-md-4 col-sm-4 col-xs-12">
+          <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="spnsors-logo">
               <a href="https://mathlab.sissa.it">
                 <img class="img-fluid" src="assets/img/sponsors/mathlab.png" alt="SISSA mathLab" style="height: 300px; width: auto; object-fit: contain;">
               </a>
             </div>
           </div>
-          <div class="col-md-4 col-sm-4 col-xs-12">
+          <div class="col-md-3 col-sm-6 col-xs-12">
             <div class="spnsors-logo">
               <a href="https://www.consorzioinest.it/en/">
                 <img class="img-fluid" src="assets/img/sponsors/inest.png" alt="iNEST" style="height: 300px; width: auto; object-fit: contain;">
+              </a>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="spnsors-logo">
+              <a href="https://www.altamatematica.it/gncs/">
+                <img class="img-fluid" src="assets/img/sponsors/GNCS.png" alt="INDAM GNCS" style="height: 300px; width: auto; object-fit: contain;">
               </a>
             </div>
           </div>
