add updated program

--- a/index.html
+++ b/index.html
@@ -316,28 +316,35 @@
 </section>
 <!-- Registration Section End -->
 
-        <!-- Schedule Section Start -->
-    <section id="schedules" class="section-padding bg-light">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div class="section-title-header text-center">
-              <h1 class="section-title wow fadeInUp" data-wow-delay="0.2s">Program</h1>
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-12 text-center">
-            <div class="coming-soon-box wow fadeInUp" data-wow-delay="0.3s">
-              <i class="lni-timer" style="font-size: 48px; margin-bottom: 20px;"></i>
-              <h2>Coming Soon!</h2>
-              <p class="lead">The detailed program will be announced closer to the event date.</p>
-            </div>
-          </div>
+
+<!-- Schedule Section Start -->
+<section id="schedules" class="section-padding bg-light">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="section-title-header text-center">
+          <h1 class="section-title wow fadeInUp" data-wow-delay="0.2s">Program</h1>
         </div>
       </div>
-    </section>
-    <!-- Schedule Section End -->
+    </div>
+    <div class="row justify-content-center mt-4">
+      <div class="col-md-6 text-center">
+        <div class="wow fadeInUp" data-wow-delay="0.3s">
+          <i class="lni-files" style="font-size: 48px; margin-bottom: 20px;"></i>
+          <h3><a href="useful_files/program_only.pdf" target="_blank">Download Program</a></h3>
+        </div>
+      </div>
+      <div class="col-md-6 text-center">
+        <div class="wow fadeInUp" data-wow-delay="0.4s">
+          <i class="lni-book" style="font-size: 48px; margin-bottom: 20px;"></i>
+          <h3><a href="useful_files/program_boa.pdf" target="_blank">Download Program and Book of Abstracts</a></h3>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Schedule Section End -->
+
 
 
     <!-- JavaScript files remain the same as in original template -->
@@ -347,11 +354,6 @@
 
   </body>
 </html>
-
-
-
-
-
 
 
 
