--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
             <img class="d-block w-100" src="assets/img/slider/slide1.png" alt="SISSA">
             <div class="carousel-caption d-md-block">
               <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Young Mathematicians in Model Order Reduction Conference</h1>
-              <p class="fadeInUp wow" data-wow-delay=".6s">May 5-9, 2025 in Trieste, Italy</p>
+			  <p class="fadeInUp wow" data-wow-delay=".6s"><strong>May 5-9</strong>, 2025 in <strong>SISSA
+			  </strong>(Trieste, Italy), <strong>Rooms 128-129</strong></p>
               <div class="buttons-group">
                 <a href="#about" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Learn More</a>
               </div>
@@ -211,7 +212,7 @@
           <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
             <div class="counter wow fadeInRight" data-wow-delay="0.3s">
               <div class="icon"><i class="lni-map"></i></div>
-              <p>SISSA, Trieste</p>
+              <p>SISSA, Trieste, Rooms 128-129</p>
               <span>Via Bonomea, 265</span>
             </div>
           </div>
@@ -377,7 +378,7 @@
                     <div class="row">
                       <div class="col-md-4 col-sm-12">
                         <div class="venue-info">
-                          <h3>SISSA</h3>
+                          <h3>SISSA, Rooms 128-129 (first floor)</h3>
                           <p><i class="lni-map-marker"></i> Via Bonomea, 265<br>34136 Trieste TS, Italy</p>
                           <p><i class="lni-world"></i> <a href="https://www.sissa.it" target="_blank">www.sissa.it</a></p>
                           <div class="venue-direction">
@@ -450,8 +451,16 @@
                   </div>
                   <div class="card-body">
                     <div class="travel-option">
+
                       <h5>Public Bus Service</h5>
-                      <p><strong>Line 38: City Center ↔ SISSA</strong></p>
+                      <p><strong>YMMOR line (free of charge): City Center ↔ SISSA</strong></p>
+                      <ul>
+                        <li>Route: Piazza Oberdan ↔ SISSA</li>
+                        <li>Frequency: at 8:30 from Piazza Oberdan to SISSA (from Monday to Friday), at 17:30 from SISSA to city center (Tuesday and Thursday) </li>
+                        <li>Journey time: Approximately 20-25 minutes</li>
+                      </ul>
+
+                      <p class="mt-4"><strong>Line 38: City Center ↔ SISSA</strong></p>
                       <ul>
                         <li>Route: Piazza Oberdan ↔ SISSA</li>
                         <li>Frequency: Every 20 minutes</li>
@@ -461,8 +470,8 @@
 
                       <p class="mt-4"><strong>Ticket Information:</strong></p>
                       <ul>
-                        <li>Single ticket: €1.45 (valid for 60 minutes)</li>
-                        <li>Daily ticket: €4.35</li>
+                        <li>Single ticket: €1.50 (valid for 60 minutes)</li>
+                        <li>Daily ticket: €3.35</li>
                         <li>Purchase locations:
                           <ul>
                             <li>On bus (credit card only)</li>
@@ -721,7 +730,7 @@
                 </div>
                 <div class="info-text mt-3">
                   <h3>Ivan Prusak</h3>
-                  <p>PostDoc, SISSA</p>
+                  <p>PostDoc, Ruhr University Bochum</p>
                 </div>
               </div>
             </div>
