--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <!-- Header Area wrapper End -->
 
     <!-- Coundown Section Start -->
+    <!--
     <section class="countdown-timer section-padding">
       <div class="container">
         <div class="row text-center">
@@ -94,6 +95,7 @@
         </div>
       </div>
     </section>
+    -->
     <!-- Coundown Section End -->
 
     <!-- About Section Start -->
@@ -758,6 +760,32 @@
               </div>
             </div>
           </div>
+
+          <!-- Third Row -->
+          <div class="row justify-content-center" style="max-width: 800px; margin: auto;">
+            <!-- Lorenzo Tomada -->
+            <div class="col-sm-12 col-md-6 mb-4">
+              <div class="team-item wow fadeInUp" data-wow-delay="1.0s">
+                <div class="team-img-wrapper">
+                  <div class="team-img">
+                    <img class="img-fluid rounded" src="assets/img/team/lorenzo.png" alt="Lorenzo Tomada">
+                    <div class="team-overlay">
+                      <div class="overlay-social-icon text-center">
+                        <ul class="social-icons">
+                          <li><a href="mailto:ltomada@sissa.it" class="social-icon"><i class="lni-envelope" aria-hidden="true"></i></a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="info-text mt-3">
+                  <h3>Lorenzo Tomada</h3>
+                  <p>PhD Student, SISSA</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
